// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Magento devdocs navigation format 1`] = `
Object {
  "homePage": "/",
  "issues": null,
  "openApiEngine": "redoc",
  "order": 1,
  "pages": Array [
    Object {
      "pages": Array [],
      "path": "/",
      "title": "Home",
    },
    Object {
      "pages": Array [
        Object {
          "pages": Array [
            Object {
              "pages": Array [],
              "path": "/nested/page/",
              "title": "Nest a page",
            },
          ],
          "path": "/example/",
          "title": "Example",
        },
      ],
      "path": "/page-2/",
      "title": "Page 2",
    },
    Object {
      "pages": Array [],
      "path": "/diagrams/",
      "title": "Diagrams",
    },
    Object {
      "pages": Array [],
      "path": "/hello/",
      "title": "Hello World",
    },
  ],
  "section": "section-1",
  "tabs": Array [],
  "title": "About",
}
`;

exports[`Valid navigation yaml format with invalid openApiEngine 1`] = `
Object {
  "homePage": "/",
  "issues": null,
  "openApiEngine": "redoc",
  "order": 1,
  "pages": Array [
    Object {
      "pages": Array [],
      "path": "/",
      "title": "Home",
    },
    Object {
      "pages": Array [
        Object {
          "pages": Array [
            Object {
              "pages": Array [],
              "path": "/nested/page/",
              "title": "Nest a page",
            },
          ],
          "path": "/example/",
          "title": "Example",
        },
      ],
      "path": "/page-2/",
      "title": "Page 2",
    },
    Object {
      "pages": Array [],
      "path": "/diagrams/",
      "title": "Diagrams",
    },
    Object {
      "pages": Array [],
      "path": "/hello/",
      "title": "Hello World",
    },
  ],
  "section": "section-1",
  "tabs": Array [],
  "title": "About",
}
`;

exports[`Valid navigation yaml format with issues 1`] = `
Object {
  "homePage": "/",
  "issues": "https://github.com/adobe/parliament-transformer-navigation/issues",
  "openApiEngine": "redoc",
  "order": 1,
  "pages": Array [
    Object {
      "pages": Array [],
      "path": "/",
      "title": "Home",
    },
    Object {
      "pages": Array [
        Object {
          "pages": Array [
            Object {
              "pages": Array [],
              "path": "/nested/page/",
              "title": "Nest a page",
            },
          ],
          "path": "/example/",
          "title": "Example",
        },
      ],
      "path": "/page-2/",
      "title": "Page 2",
    },
    Object {
      "pages": Array [],
      "path": "/diagrams/",
      "title": "Diagrams",
    },
    Object {
      "pages": Array [],
      "path": "/hello/",
      "title": "Hello World",
    },
  ],
  "section": "section-1",
  "tabs": Array [],
  "title": "About",
}
`;

exports[`Valid navigation yaml format with openApiEngine 1`] = `
Object {
  "homePage": "/",
  "issues": null,
  "openApiEngine": "swagger-ui",
  "order": 1,
  "pages": Array [
    Object {
      "pages": Array [],
      "path": "/",
      "title": "Home",
    },
    Object {
      "pages": Array [
        Object {
          "pages": Array [
            Object {
              "pages": Array [],
              "path": "/nested/page/",
              "title": "Nest a page",
            },
          ],
          "path": "/example/",
          "title": "Example",
        },
      ],
      "path": "/page-2/",
      "title": "Page 2",
    },
    Object {
      "pages": Array [],
      "path": "/diagrams/",
      "title": "Diagrams",
    },
    Object {
      "pages": Array [],
      "path": "/hello/",
      "title": "Hello World",
    },
  ],
  "section": "section-1",
  "tabs": Array [],
  "title": "About",
}
`;

exports[`Valid navigation yaml format with tabs 1`] = `
Object {
  "homePage": "/",
  "issues": null,
  "openApiEngine": "redoc",
  "order": 1,
  "pages": Array [
    Object {
      "pages": Array [],
      "path": "/",
      "title": "Home",
    },
  ],
  "section": "section-1",
  "tabs": Array [
    Object {
      "path": "/foo/",
      "title": "foo",
    },
    Object {
      "path": "/foo/bar/",
      "title": "bar",
    },
  ],
  "title": "About",
}
`;

exports[`Valid navigation yaml format without homepage 1`] = `
Object {
  "homePage": "/example/",
  "issues": null,
  "openApiEngine": "redoc",
  "order": 1,
  "pages": Array [
    Object {
      "pages": Array [
        Object {
          "pages": Array [
            Object {
              "pages": Array [],
              "path": "/nested/page/",
              "title": "Nest a page",
            },
            Object {
              "pages": Array [],
              "path": "/diagrams/",
              "title": "Diagrams",
            },
            Object {
              "pages": Array [],
              "path": "/hello/",
              "title": "Hello World",
            },
          ],
          "path": "/example/",
          "title": "Example",
        },
      ],
      "path": "",
      "title": "Home",
    },
  ],
  "section": "section-1",
  "tabs": Array [],
  "title": "About",
}
`;

exports[`Valid navigation yaml format without issues 1`] = `
Object {
  "homePage": "/",
  "issues": null,
  "openApiEngine": "redoc",
  "order": 1,
  "pages": Array [
    Object {
      "pages": Array [],
      "path": "/",
      "title": "Home",
    },
    Object {
      "pages": Array [
        Object {
          "pages": Array [
            Object {
              "pages": Array [],
              "path": "/nested/page/",
              "title": "Nest a page",
            },
          ],
          "path": "/example/",
          "title": "Example",
        },
      ],
      "path": "/page-2/",
      "title": "Page 2",
    },
    Object {
      "pages": Array [],
      "path": "/diagrams/",
      "title": "Diagrams",
    },
    Object {
      "pages": Array [],
      "path": "/hello/",
      "title": "Hello World",
    },
  ],
  "section": "section-1",
  "tabs": Array [],
  "title": "About",
}
`;
